--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,15 @@
 {
   "dependencies": {
+    "com.unity.2d.animation": "2.0.0-preview.3",
+    "com.unity.2d.pixel-perfect": "1.0.1-preview",
     "com.unity.ads": "2.0.8",
     "com.unity.analytics": "3.2.2",
+    "com.unity.cinemachine": "2.2.8",
     "com.unity.collab-proxy": "1.2.15",
+    "com.unity.inputsystem": "0.2.1-preview",
     "com.unity.package-manager-ui": "2.0.7",
     "com.unity.purchasing": "2.0.3",
+    "com.unity.quicksearch": "1.0.9-preview.2",
     "com.unity.textmeshpro": "1.3.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
